--- a/app/src/main/res/layout/fragment_mtgcard.xml
+++ b/app/src/main/res/layout/fragment_mtgcard.xml
@@ -5,21 +5,21 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/card_image"
+        android:id="@+id/image"
         android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_margin="@dimen/text_margin"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:src="@drawable/placeholder"
-        android:layout_margin="@dimen/text_margin" />
+        android:src="@drawable/placeholder" />
 
     <TextView
-        android:id="@+id/card_content"
-        android:layout_gravity="center_vertical"
+        android:id="@+id/content"
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="@dimen/text_margin"
+        android:layout_weight="2"
         android:text="Placeholder"
-        android:textSize="24dp"
-        android:layout_margin="@dimen/text_margin"/>
+        android:textSize="24dp" />
 </LinearLayout>
