Misc Code Cleanup.

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -11,8 +11,7 @@
         android:id="@+id/details_multiplier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="45"
-        android:textSize="100dp"
+        android:textSize="@dimen/answer_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -23,7 +22,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:text="X"
-        android:textSize="100dp"
+        android:textSize="@dimen/answer_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +34,7 @@
         android:layout_height="wrap_content"
         android:hint="45"
         android:paddingTop="10dp"
-        android:textSize="100dp"
+        android:textSize="@dimen/answer_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +46,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:text="="
-        android:textSize="100dp"
+        android:textSize="@dimen/answer_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +58,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:text="?"
-        android:textSize="100dp"
+        android:textSize="@dimen/answer_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
