--- a/Fragments/app/src/main/res/layout/fragment_details.xml
+++ b/Fragments/app/src/main/res/layout/fragment_details.xml
@@ -7,21 +7,25 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/detailFirstName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
     <TextView
+        android:id="@+id/detailLastName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
     <TextView
+        android:id="@+id/detailEmail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
     <TextView
+        android:id="@+id/detailPhone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
