--- a/app/src/main/res/layout/fragment_pokemon.xml
+++ b/app/src/main/res/layout/fragment_pokemon.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/pokemon_image"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="@dimen/text_margin"
         android:layout_weight="1"
         android:adjustViewBounds="true"
-        android:layout_margin="@dimen/text_margin"
+        android:scaleType="fitCenter"
         android:src="@android:drawable/ic_delete"
         tools:ignore="ContentDescription" />
 
