--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-        <fragment
+        <FrameLayout
+            android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:name="com.example.fragmentproject.PokemonFragment"
-            android:layout_height="match_parent"></fragment>
+            android:layout_height="match_parent">
+        </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
