Successfully populated list fragment with pokemon items

--- a/app/src/main/res/layout/fragment_pokemon_list.xml
+++ b/app/src/main/res/layout/fragment_pokemon_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".PokemonFragment"
+    tools:context=".PokemonListFragment"
     tools:listitem="@layout/fragment_pokemon" />
