--- a/app/src/main/res/layout/fragment_pokemon_details.xml
+++ b/app/src/main/res/layout/fragment_pokemon_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".PokemonDetailFragment">
+    tools:context=".PokemonDetailsFragment">
 
     <LinearLayout
         android:id="@+id/pokemon_detail_layout"
