--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"
         android:padding="30dp"
-        android:scaleType="fitXY"
+        android:src="@drawable/ic_launcher_background"
         app:layout_constraintTop_toBottomOf="@id/poke_type2" />
 
     <TextView
