--- a/app/src/main/res/layout/fragment_congresspersonoverview.xml
+++ b/app/src/main/res/layout/fragment_congresspersonoverview.xml
@@ -4,6 +4,12 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal">
 
+
+    <TextView android:layout_width="match_parent"
+              android:layout_height="match_parent"
+    android:text="fragment test"
+              android:textSize="50dp"
+    />
     <TextView
             android:id="@+id/item_number"
             android:layout_width="wrap_content"
