--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/main_fragment_holder"
-        tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
-
-
-
-    <fragment
-            android:layout_width="match_parent"
-
+    <FrameLayout
+            android:id="@+id/main_fragment_holder"
+android:layout_width="match_parent"
             android:layout_height="match_parent"
-        android:name="com.lambdaschool.congressfragmentsproject.fragments.CongresspersonOverviewFragment"
-              />
+            android:layout_weight="1"
+            android:name="com.lambdaschool.congressfragmentsproject.fragments.CongresspersonOverviewFragment"
 
-
-</FrameLayout>
+    ></FrameLayout>
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:id="@+id/secondary_fragment_holder"
+            tools:ignore="Suspicious0dp"></FrameLayout>
+</LinearLayout>
