null error at assigning tv_name -- stepping away to clear head...

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             android:text="name"
             android:textSize="30dp"
-    android:id="@+id/tv_name"/>
+    android:id="@+id/tv_first_name"/>
 
 
 </FrameLayout>
