--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_activity_fragment_hodler"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-    <!--<fragment
+    <fragment
+        android:id="@+id/main_activity_fragment_hodler"
         android:name="com.lambdaschool.congressfragmentsproject.fragment.CongresspersonOverviewFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>-->
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <!--<TextView
+        android:text="List Fragment"
+        android:textAlignment="center"
+        android:textSize="48sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />-->
 
 </FrameLayout>
