--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,12 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/main_fragment_holder"
-        tools:context=".MainActivity">
-
-    <fragment
-            android:name="com.lambdaschool.congressfragmentsproject.CongresspersonOverviewFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        android:id="@+id/Phone_Details_View_Holder"
+        tools:context=".Main2Activity">
 
 </FrameLayout>
