--- a/app/src/main/res/layout-w600dp/activity_main.xml
+++ b/app/src/main/res/layout-w600dp/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +11,16 @@
     <fragment
             android:name="com.lambdaschool.congressfragmentsproject.CongresspersonOverviewFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight ="1">
     </fragment>
-    
+
+    <FrameLayout
+            android:id="@+id/details_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
