--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -6,20 +6,19 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main_activity_fragment_hodler"
     tools:context=".activity.MainActivity">
 
     <fragment
         android:layout_weight="1"
-        android:id="@+id/main_activity_fragment_hodler"
         android:name="com.lambdaschool.congressfragmentsproject.fragment.CongresspersonOverviewFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <fragment
-        android:layout_weight="1"
+    <FrameLayout
+        android:layout_weight="2"
         android:id="@+id/secondary_main_activity_fragment_hodler"
-        android:name="com.lambdaschool.congressfragmentsproject.fragment.CongresspersonOverviewFragment"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent" />
 
 
