--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
 
     <fragment
         android:name="com.lambdaschool.congressfragmentsproject.fragment.CongresspersonOverviewFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <!--<TextView
         android:text="List Fragment"
